fix: #103 修复列表脑图视图辅助线错位问题 | Fixed the issue of misalignment of guides in the brain map view of the list.

--- a/style/module/custom-type-map.less
+++ b/style/module/custom-type-map.less
@@ -79,7 +79,7 @@
                 &[data-subtype="u"] {
                     &::after {
                         /* 修复无序列表前导线错位问题 */
-                        bottom: calc(50% - var(--custom-list-guides-line-width) / 4);
+                        bottom: calc(50% - var(--custom-list-guides-line-width) / 3);
                     }
 
                     >div.protyle-action {
